add: jwt in login and protecting user routes.
