# src/routes/post.routes.ts
@@ -5,6 +5,7 @@ import { getAllPosts } from '../http/controllers/post/get-all-posts' // Importin
 import { deletePostById } from '../http/controllers/post/deletePostById' // Importing the controller for deleting a post by ID
 import { updatePostById } from '../http/controllers/post/update-post' // Importing the controller for updating a post by ID
 import { getAllPostsPagination } from '../http/controllers/post/get-all-posts-pagination' // Importing the controller for getting all posts with pagination;
+import { authMiddleware } from '../middleware/auth'
 
 const router = Router() // Creating an instance of the Express Router
 
@@ -15,15 +16,15 @@ router.get('/', getAllPosts) // Defining a route to get all posts
 router.get('/pagination', getAllPostsPagination) // Defining a route to get all posts with pagination
 
 // Create a new post
-router.post('/', createPost) // Defining a route to create a new post
+router.post('/', authMiddleware, createPost) // Defining a route to create a new post
 
 // Get a single post by ID
 router.get('/:id', getPostById) // Defining a route to get a post by its ID
 
 // Update a post by ID
-router.patch('/:id', updatePostById) // Defining a route to update a post by its ID
+router.patch('/:id', authMiddleware, updatePostById) // Defining a route to update a post by its ID
 
 // Delete a post by ID
-router.delete('/:id', deletePostById) // Defining a route to delete a post by its ID
+router.delete('/:id', authMiddleware, deletePostById) // Defining a route to delete a post by its ID
 
 export default router // Exporting the configured router for use in other modules
